<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{0048069a-d4d8-486e-aafb-7576e6aaa7d9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	MyFub : TestFub;
	MyStruct: TestStructure; 	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>