<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{d28f26a4-102d-413e-a996-ee61b6348cd0}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	MyFub : TestFub;
	MyFubI : TestFubI;
	MyStruct: TestStructure; 
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[MyFub._INTERFACE := MyFubI;
MyFub.Incrementing	:= MyFub.Incrementing + 1;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>